--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Hello !!</h1>
-</body>
+  <header id="header">
+      <nav id="menu">
+        <div id='search'>
+          <input type="text" id="iSearch" placeholder="Pesquisar contato"/>
+          <img src="img/icon-search.png" />
+        </div>
+        <div id="menuButtons">
+          <a id='aFavorites'>&#9733;Favoritos</a>
+          <a id='aNewContact'>&#43;Novo contato</a>
+        </div>
+      </nav>
+  </header>
+
+  <div id="container">
+
+  <h1>Meus contatos</h1>
+
+
+      <div id="contactList">
+        
+      </div>
+
+      <div id="modal">
+
+      </div>
+
+      <button id="btAdd">&#43;</button>
+
+    </div>
+  </body>
 </html>
