--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,19 @@
 
 <body>
   <header id="header">
-      <div id="menu">
-          <div id="menuButtons">
-            <a id='aHome'><span></span>Home</a>
-            <a id="aFavorites"><span>&#9733;</span>Favoritos</a>
-            <a id="aNewContact"><span>&#43;</span>Novo contato</a>
-          </div>
+      <button id ="btToggle">&equiv;</button>
         <div id="search">
             <input type="text" id="iSearch" placeholder="Pesquisar contato"/>
             <button id='btSearch'><img src="img/icon-search.png" /></button>
         </div>
   </header>
+  <div id="menuButtons">
+      <a id='aHome'><span></span>Home</a>
+      <a id="aFavorites"><span>&#9733;</span>Favoritos</a>
+      <a id="aNewContact"><span>&#43;</span>Novo contato</a>
+  </div>
+
+  
 
 
 
